# sdlpal

libretro/: libretro.c
libretro/sdl-libretro/: SDL_config.h
miyoo/: CMakeLists.txt  pal_config.h  pal_utils.c
